--- a/belgeler/kap-orgusu/konumlama.html
+++ b/belgeler/kap-orgusu/konumlama.html
@@ -124,7 +124,7 @@ title: Kap Örgüsü Konumlama
       göbekte
     </div>
   </div>
-  <div data-gnl="1 3p altta" style="height:33vh;">
+  <div data-gnl="1 3p altta" style="height:500px;">
     <div data-gnl="1 1p">
       altta
     </div>
@@ -137,7 +137,7 @@ title: Kap Örgüsü Konumlama
   </div>
 </div>
 <pre data-gnl="1 1p"><code class="language-html">
-&lt;div data-gnl=&quot;1 3p &uuml;stte&quot; style=&quot;height:33vh;&quot;&gt;
+&lt;div data-gnl=&quot;1 3p &uuml;stte&quot; style=&quot;height:500px;&quot;&gt;
   &lt;div data-gnl=&quot;1 1p&quot;&gt;
     &uuml;stte
   &lt;/div&gt;
@@ -148,7 +148,7 @@ title: Kap Örgüsü Konumlama
     &uuml;stte
   &lt;/div&gt;
   &lt;/div&gt;
-&lt;div data-gnl=&quot;1 3p g&ouml;bekte&quot; style=&quot;height:33vh;&quot;&gt;
+&lt;div data-gnl=&quot;1 3p g&ouml;bekte&quot; style=&quot;height:500px;&quot;&gt;
   &lt;div data-gnl=&quot;1 1p&quot;&gt;
     g&ouml;bekte
   &lt;/div&gt;
@@ -159,7 +159,7 @@ title: Kap Örgüsü Konumlama
     g&ouml;bekte
   &lt;/div&gt;
 &lt;/div&gt;
-&lt;div data-gnl=&quot;1 3p altta&quot; style=&quot;height:33vh;&quot;&gt;
+&lt;div data-gnl=&quot;1 3p altta&quot; style=&quot;height:500px;&quot;&gt;
   &lt;div data-gnl=&quot;1 1p&quot;&gt;
     altta
   &lt;/div&gt;
@@ -233,7 +233,7 @@ title: Kap Örgüsü Konumlama
 <p>"uzun-ol" sınıfı bir tanımlandığı etiketi içinde bulunduğu etiketin durumuna göre uzatır.</p>
 <div data-gnl="1 1p" class="önizleme">
   <h3>Önizleme</h3>
-  <div data-gnl="1 2p uzat" style="height:33vh;">
+  <div data-gnl="1 2p uzat" style="height:500px;">
     <div data-gnl="0">
       uzat
     </div>
@@ -244,7 +244,7 @@ title: Kap Örgüsü Konumlama
       uzat
     </div>
   </div>
-  <div data-gnl="1 2p" style="height:33vh;">
+  <div data-gnl="1 2p" style="height:500px;">
     <div data-gnl="0 üstte-ol">
       üstte-ol
     </div>
@@ -257,7 +257,7 @@ title: Kap Örgüsü Konumlama
   </div>
 </div>
 <pre data-gnl="1 1p"><code class="language-html">
-&lt;div data-gnl=&quot;1 2p uzat&quot; style=&quot;height:33vh;&quot;&gt;
+&lt;div data-gnl=&quot;1 2p uzat&quot; style=&quot;height:500px;&quot;&gt;
  &lt;div data-gnl=&quot;0&quot;&gt;
    uzat
  &lt;/div&gt;
@@ -268,7 +268,7 @@ title: Kap Örgüsü Konumlama
    uzat
  &lt;/div&gt;
 &lt;/div&gt;
-&lt;div data-gnl=&quot;1 2p uzat&quot; style=&quot;height:33vh;&quot;&gt;
+&lt;div data-gnl=&quot;1 2p uzat&quot; style=&quot;height:500px;&quot;&gt;
  &lt;div data-gnl=&quot;0 üstte-ol&quot;&gt;
    üstte-ol
  &lt;/div&gt;
@@ -313,7 +313,7 @@ title: Kap Örgüsü Konumlama
   </div>
 </div>
 <pre data-gnl="1 1p"><code class="language-html">
-&lt;div data-gnl=&quot;1 1p sat&#305;rda&quot; style=&quot;height:33vh;&quot;&gt;
+&lt;div data-gnl=&quot;1 1p sat&#305;rda&quot; style=&quot;height:500px;&quot;&gt;
   &lt;div data-gnl=&quot;0&quot; style=&quot;font-size:2em&quot;&gt;
     &Ouml;rnek bir yaz&#305; &quot;sat&#305;rda&quot;.
   &lt;/div&gt;
@@ -321,7 +321,7 @@ title: Kap Örgüsü Konumlama
     &Ouml;rnek bir yaz&#305; &quot;sat&#305;rda&quot;.
   &lt;/div&gt;
 &lt;/div&gt;
-&lt;div data-gnl=&quot;1 1p&quot; style=&quot;height:33vh;&quot;&gt;
+&lt;div data-gnl=&quot;1 1p&quot; style=&quot;height:500px;&quot;&gt;
   &lt;div data-gnl=&quot;0 sat&#305;rda-ol&quot; style=&quot;font-size:2em&quot;&gt;
     &Ouml;rnek bir yaz&#305; &quot;sat&#305;rda-ol&quot;.
   &lt;/div&gt;
