--- a/belgeler/kap-orgusu/konumlama.html
+++ b/belgeler/kap-orgusu/konumlama.html
@@ -203,26 +203,26 @@ title: Kap Örgüsü Konumlama
   </div>
 </div>
 <pre data-gnl="1 1p"><code class="language-html">
-&lt;div data-gnl=&quot;1 1p geniş-aralıklı&quot;&gt;
+&lt;div data-gnl=&quot;1 1p araları-aralık&quot;&gt;
   &lt;div data-gnl=&quot;1 8p&quot;&gt;
-    geniş-aralıklı
+    araları-aralık
   &lt;/div&gt;
   &lt;div data-gnl=&quot;1 8p&quot;&gt;
-    geniş-aralıklı
+    araları-aralık
   &lt;/div&gt;
   &lt;div data-gnl=&quot;1 8p&quot;&gt;
-    geniş-aralıklı
+    araları-aralık
   &lt;/div&gt;
 &lt;/div&gt;
-&lt;div data-gnl=&quot;1 1p aralıklı&quot;&gt;
+&lt;div data-gnl=&quot;1 1p dengeli-aralık&quot;&gt;
   &lt;div data-gnl=&quot;1 8p&quot;&gt;
-    aralıklı
+    dengeli-aralık
   &lt;/div&gt;
   &lt;div data-gnl=&quot;1 8p&quot;&gt;
-    aralıklı
+    dengeli-aralık
   &lt;/div&gt;
   &lt;div data-gnl=&quot;1 8p&quot;&gt;
-    aralıklı
+    dengeli-aralık
   &lt;/div&gt;
 &lt;/div&gt;
 </code></pre>
