--- a/belgeler/deveb.html
+++ b/belgeler/deveb.html
@@ -1,22 +1,43 @@
 ---
 layout: default
-title: Giriş
+title: Deveb'e Hoş Geldiniz
 ---
-<h1>Deveb Hakkında</h1>
-<p>Deveb, Türkçe ve İngilizce terimler kullanılarak geliştirilen bir önyüz çatısıdır. Ağ geliştiricileri ve adayları (web developers) alışılmış olanın ötesine geçmeye hazırlanın. Deveb yeni bir soluk getiriyor. Özellikleriyle birlikte ele alındığında etkisi altında kalacaksınız. Barındırdığı kuralları öğrenmek ise fazla vaktinizi almayacak.</p>
+<p>
+  Deveb, ağ geliştiricileri (web developers) için geliştirilen önyüz çatısıdır.
+  Ağ geliştiricileri (web developers) ve adayları, alışılmış olanın ötesine geçmeye
+  hazırlanın. Yeni bir soluk getiren Deveb ile tanışmak üzeresiniz. Özellikleriyle
+  birlikte ele alındığında etkisi altında kalacağınıza inanıyoruz. Barındırdığı
+  özellikleri öğrenmek fazla zamanınızı almayacak.
+</p>
+
+<div data-gnl="1 1p ortada metin-ortada" data-byk="dengeli-aralık">
+  <div data-kart>
+    <h1>UYARLAMALI</h1>
+    <p style="font-size:23px;">
+    <i class="fa fa-mobile" aria-hidden="true" style="font-size:1em;"></i>
+    <i class="fa fa-tablet" aria-hidden="true" style="font-size:1.3em;"></i>
+    <i class="fa fa-laptop" aria-hidden="true" style="font-size:1.7em;"></i>
+    <i class="fa fa-desktop" aria-hidden="true" style="font-size:2em;"></i>
+    </p>
+    <p>Küçük ekran öncelikli tasarım</p>
+  </div>
+  <div data-kart>
+      <h1>ÜCRETSİZ</h1>
+      <p style="font-size:23px;">
+        <i class="fa fa-github" aria-hidden="true" style="font-size:2em;"></i>
+      </p>
+      <p>Github düzleminde açık kaynak</p>
+  </div>
+  <div data-kart>
+    <h1>ÇAĞDAŞ</h1>
+    <p style="font-size:23px;">
+      <i class="fa fa-css3" aria-hidden="true" style="font-size:2em;"></i>
+    </p>
+    <p>Elverişli en iyi imkanlarla</p>
+  </div>
+</div>
+
 <p></p>
-<div data-gnl="1 1p ortada" data-kçk="1 3p">
-  <i class="fa fa-th" aria-hidden="true"></i>
-  <p data-gnl="1 1p ortada">Esnek & Özellikli</p>
-</div>
-<div data-gnl="1 1p ortada" data-kçk="1 3p">
-  <i class="fa fa-code" aria-hidden="true"></i>
-  <p data-gnl="1 1p ortada">İhtiyaç Duyulan</p>
-</div>
-<div data-gnl="1 1p ortada" data-kçk="1 3p">
-  <i class="fa fa-coffee" aria-hidden="true"></i>
-  <p data-gnl="1 1p ortada">Hızlı Kullanım</p>
-</div>
 
 <h1>Genel Sınıflar Değil, Veri Niteliği Sınıfları Tanımladık!</h1>
 <p>Deveb "html class" diye bilinen sınıf özelliğini bir kenara koyuyor. Yani bu alanı Deveb'i kullanmak isteyen ağ geliştiricileri için boşaltıyor. Peki bir geliştirici Deveb'i nasıl kullanacak? Deveb'in özellikleri "data-attr" olarak bilinen veri niteliği ile birlikte kullanılmaktadır.</p>
