--- a/belgeler/kap-orgusu/konumlama.html
+++ b/belgeler/kap-orgusu/konumlama.html
@@ -10,35 +10,35 @@ title: Kap Örgüsü Konumlama
 </style>
 <p>Deveb kap örgüsünün konumlama özellikleri oluşturulmuş birkaç öznitelik sınıfıyla kullanılır. İsterseniz tek tek bu sınıfları inceleyelim</p>
 
-<h3>Konumlama: <span data-metin="dikkat">sağdan|soldan-SAYI SAYIp-öte</span></h3>
-<p>Bir ögeyi soldan veya sağdan öte bırakmak istiyorsak bu konumlama özelliğini kullanırız.</p>
+<h3>Konumlama: <span data-metin="dikkat">sağdan|soldan-SAYI SAYIp-aralık</span></h3>
+<p>Bir ögeyi soldan veya sağdan parça düzenine göre aralık bırakmak istiyorsak bu konumlama özelliğini kullanırız. Eğer parça ölçeğinde değişiklik yapmak istemiyorsanız sadece sağdan|soldan-SAYI yazmanız yeterli olacaktır.</p>
 <div data-gnl="1 1p" class="önizleme">
   <h3>Önizleme</h3>
   <div data-gnl="1 1p">
-    <div data-gnl="1 3p soldan-1 6p-öte">
-      1 3p soldan-1 6p-öte
+    <div data-gnl="1 3p soldan-1 6p-aralık">
+      1 3p soldan-1 6p-aralık
     </div>
-    <div data-gnl="1 3p soldan-2 19p-öte">
-      1 3p soldan-2 19p-öte
+    <div data-gnl="1 3p soldan-2 19p-aralık">
+      1 3p soldan-2 19p-aralık
     </div>
-    <div data-gnl="1 3p sağdan-2 3p-öte">
-      1 3p sağdan-2 3p-öte
+    <div data-gnl="1 3p sağdan-2">
+      1 3p sağdan-2
     </div>
-    <div data-gnl="3 4p">
-      3 4p
+    <div data-gnl="2 3p">
+      2 3p
     </div>
   </div>
 </div>
 <pre data-gnl="1 1p"><code class="language-html">
 &lt;div data-gnl=&quot;1 1p&quot;&gt;
- &lt;div data-gnl=&quot;1 3p soldan-1 6p-öte&quot;&gt;
-  1 3p soldan-1 6p-öte
+ &lt;div data-gnl=&quot;1 3p soldan-1 6p-aralık&quot;&gt;
+  1 3p soldan-1 6p-aralık
  &lt;/div&gt;
- &lt;div data-gnl=&quot;1 3p soldan-2 19p-öte&quot;&gt;
-  1 3p soldan-2 19p-öte
+ &lt;div data-gnl=&quot;1 3p soldan-2 19p-aralık&quot;&gt;
+  1 3p soldan-2 19p-aralık
  &lt;/div&gt;
- &lt;div data-gnl=&quot;1 3p sağdan-2 3p-öte&quot;&gt;
-  1 3p sağdan-2 3p-öte
+ &lt;div data-gnl=&quot;1 3p sağdan-2 3p-aralık&quot;&gt;
+  1 3p sağdan-2 3p-aralık
  &lt;/div&gt;
  &lt;div data-gnl=&quot;3 4p&quot;&gt;
   3 4p
