--- a/belgeler/kap-orgusu/parca-duzeni.html
+++ b/belgeler/kap-orgusu/parca-duzeni.html
@@ -24,18 +24,19 @@ title: Parça Düzeni
     <div data-gnl="1 3p">
       1 3p
     </div>
+    <pre><code class="language-html">
+    &lt;div data-gnl=&quot;1 3p&quot;&gt;
+      1 3p
+    &lt;/div&gt;
+    &lt;div data-gnl=&quot;1 3p&quot;&gt;
+      1 3p
+    &lt;/div&gt;
+    &lt;div data-gnl=&quot;1 3p&quot;&gt;
+      1 3p
+    &lt;/div&gt;
+    </code></pre>
   </div>
-  <pre data-gnl="1 1p"><code class="language-html">
-  &lt;div data-gnl=&quot;1 3p&quot;&gt;
-    1 3p
-  &lt;/div&gt;
-  &lt;div data-gnl=&quot;1 3p&quot;&gt;
-    1 3p
-  &lt;/div&gt;
-  &lt;div data-gnl=&quot;1 3p&quot;&gt;
-    1 3p
-  &lt;/div&gt;
-  </code></pre>
+
   <div data-gnl="1 1p" class="önizleme">
     <h3>Önizleme: Örnek 2</h3>
     <div data-gnl="3 20p">
@@ -47,18 +48,19 @@ title: Parça Düzeni
     <div data-gnl="7 20p">
       7 20p
     </div>
+    <pre><code class="language-html">
+    &lt;div data-gnl=&quot;3 20p&quot;&gt;
+      3 20p
+    &lt;/div&gt;
+    &lt;div data-gnl=&quot;10 20p&quot;&gt;
+      10 20p
+    &lt;/div&gt;
+    &lt;div data-gnl=&quot;7 20p&quot;&gt;
+      7 20p
+    &lt;/div&gt;
+    </code></pre>
   </div>
-  <pre data-gnl="1 1p"><code class="language-html">
-  &lt;div data-gnl=&quot;3 20p&quot;&gt;
-    3 20p
-  &lt;/div&gt;
-  &lt;div data-gnl=&quot;10 20p&quot;&gt;
-    10 20p
-  &lt;/div&gt;
-  &lt;div data-gnl=&quot;7 20p&quot;&gt;
-    7 20p
-  &lt;/div&gt;
-  </code></pre>
+
   <div data-gnl="1 1p" class="önizleme">
     <h3>Önizleme: Örnek 3</h3>
     <p>Örnek 1 ve 2'yi bir arada işlemek</p>
@@ -80,27 +82,28 @@ title: Parça Düzeni
     <div data-gnl="7 20p">
       7 20p
     </div>
+    <pre><code class="language-html">
+    &lt;div data-gnl=&quot;1 3p&quot;&gt;
+      1 3p
+    &lt;/div&gt;
+    &lt;div data-gnl=&quot;1 3p&quot;&gt;
+      1 3p
+    &lt;/div&gt;
+    &lt;div data-gnl=&quot;1 3p&quot;&gt;
+      1 3p
+    &lt;/div&gt;
+    &lt;div data-gnl=&quot;3 20p&quot;&gt;
+      3 20p
+    &lt;/div&gt;
+    &lt;div data-gnl=&quot;10 20p&quot;&gt;
+      10 20p
+    &lt;/div&gt;
+    &lt;div data-gnl=&quot;7 20p&quot;&gt;
+      7 20p
+    &lt;/div&gt;
+    </code></pre>
   </div>
-  <pre data-gnl="1 1p"><code class="language-html">
-  &lt;div data-gnl=&quot;1 3p&quot;&gt;
-    1 3p
-  &lt;/div&gt;
-  &lt;div data-gnl=&quot;1 3p&quot;&gt;
-    1 3p
-  &lt;/div&gt;
-  &lt;div data-gnl=&quot;1 3p&quot;&gt;
-    1 3p
-  &lt;/div&gt;
-  &lt;div data-gnl=&quot;3 20p&quot;&gt;
-    3 20p
-  &lt;/div&gt;
-  &lt;div data-gnl=&quot;10 20p&quot;&gt;
-    10 20p
-  &lt;/div&gt;
-  &lt;div data-gnl=&quot;7 20p&quot;&gt;
-    7 20p
-  &lt;/div&gt;
-  </code></pre>
+
   <p></p>
 
   <h3>"SAYI SAYIp" >> "SAYI SAYIp" Kullanım Yöntemi</h3>
@@ -123,23 +126,24 @@ title: Parça Düzeni
         Tüm ekranlarda bulunduğu genişliğin 1/4'ünü kapla.
       </div>
     </div>
+    <pre><code class="language-html">
+    &lt;div data-gnl=&quot;2 2p&quot;&gt;
+      &lt;div data-gnl=&quot;1 4p&quot;&gt;
+        Tüm ekranlarda bulunduğu genişliğin 1/4'ünü kapla.
+      &lt;/div&gt;
+      &lt;div data-gnl=&quot;1 4p&quot;&gt;
+        Tüm ekranlarda bulunduğu genişliğin 1/4'ünü kapla.
+      &lt;/div&gt;
+      &lt;div data-gnl=&quot;1 4p&quot;&gt;
+        Tüm ekranlarda bulunduğu genişliğin 1/4'ünü kapla.
+      &lt;/div&gt;
+      &lt;div data-gnl=&quot;1 4p&quot;&gt;
+        Tüm ekranlarda bulunduğu genişliğin 1/4'ünü kapla.
+      &lt;/div&gt;
+    &lt;/div&gt;
+    </code></pre>
   </div>
-  <pre data-gnl="1 1p"><code class="language-html">
-  &lt;div data-gnl=&quot;2 2p&quot;&gt;
-    &lt;div data-gnl=&quot;1 4p&quot;&gt;
-      Tüm ekranlarda bulunduğu genişliğin 1/4'ünü kapla.
-    &lt;/div&gt;
-    &lt;div data-gnl=&quot;1 4p&quot;&gt;
-      Tüm ekranlarda bulunduğu genişliğin 1/4'ünü kapla.
-    &lt;/div&gt;
-    &lt;div data-gnl=&quot;1 4p&quot;&gt;
-      Tüm ekranlarda bulunduğu genişliğin 1/4'ünü kapla.
-    &lt;/div&gt;
-    &lt;div data-gnl=&quot;1 4p&quot;&gt;
-      Tüm ekranlarda bulunduğu genişliğin 1/4'ünü kapla.
-    &lt;/div&gt;
-  &lt;/div&gt;
-  </code></pre>
+
   <p></p>
 
   <h3>"SAYI SAYIp" > "SAYI" Kullanım Yöntemi</h3>
@@ -156,17 +160,18 @@ title: Parça Düzeni
         Tüm ekranlarda bulunduğu genişliğin yarısını kapla.
       </div>
     </div>
+    <pre><code class="language-html">
+    &lt;div data-gnl=&quot;2 2p&quot;&gt;
+      &lt;div data-gnl=&quot;1&quot;&gt;
+        Tüm ekranlarda bulunduğu genişliğin yarısını kapla.
+      &lt;/div&gt;
+      &lt;div data-gnl=&quot;1&quot;&gt;
+        Tüm ekranlarda bulunduğu genişliğin yarısını kapla.
+      &lt;/div&gt;
+    &lt;/div&gt;
+    </code></pre>
   </div>
-  <pre data-gnl="1 1p"><code class="language-html">
-  &lt;div data-gnl=&quot;2 2p&quot;&gt;
-    &lt;div data-gnl=&quot;1&quot;&gt;
-      Tüm ekranlarda bulunduğu genişliğin yarısını kapla.
-    &lt;/div&gt;
-    &lt;div data-gnl=&quot;1&quot;&gt;
-      Tüm ekranlarda bulunduğu genişliğin yarısını kapla.
-    &lt;/div&gt;
-  &lt;/div&gt;
-  </code></pre>
+
   <p></p>
 
   <h3>Genleşme Ve Parça Düzeni Kıyaslaması</h3>
@@ -196,29 +201,30 @@ title: Parça Düzeni
         2 7p
       </div>
     </div>
+    <pre><code class="language-html">
+    &lt;div data-gnl=&quot;1 1p&quot;&gt;
+      &lt;div data-gnl=&quot;1g&quot;&gt;
+        1g
+      &lt;/div&gt;
+      &lt;div data-gnl=&quot;4g&quot;&gt;
+        4g
+      &lt;/div&gt;
+      &lt;div data-gnl=&quot;2g&quot;&gt;
+        2g
+      &lt;/div&gt;
+    &lt;/div&gt;
+    &lt;div data-gnl=&quot;1 1p&quot;&gt;
+      &lt;div data-gnl=&quot;1 7p&quot;&gt;
+        1 7p
+      &lt;/div&gt;
+      &lt;div data-gnl=&quot;4 7p&quot;&gt;
+        4 7p
+      &lt;/div&gt;
+      &lt;div data-gnl=&quot;2 7p&quot;&gt;
+        2 7p
+      &lt;/div&gt;
+    &lt;/div&gt;
+    </code></pre>
   </div>
-  <pre data-gnl="1 1p"><code class="language-html">
-  &lt;div data-gnl=&quot;1 1p&quot;&gt;
-    &lt;div data-gnl=&quot;1g&quot;&gt;
-      1g
-    &lt;/div&gt;
-    &lt;div data-gnl=&quot;4g&quot;&gt;
-      4g
-    &lt;/div&gt;
-    &lt;div data-gnl=&quot;2g&quot;&gt;
-      2g
-    &lt;/div&gt;
-  &lt;/div&gt;
-  &lt;div data-gnl=&quot;1 1p&quot;&gt;
-    &lt;div data-gnl=&quot;1 7p&quot;&gt;
-      1 7p
-    &lt;/div&gt;
-    &lt;div data-gnl=&quot;4 7p&quot;&gt;
-      4 7p
-    &lt;/div&gt;
-    &lt;div data-gnl=&quot;2 7p&quot;&gt;
-      2 7p
-    &lt;/div&gt;
-  &lt;/div&gt;
-  </code></pre>
+
   <p></p>
