--- a/belgeler/deveb.html
+++ b/belgeler/deveb.html
@@ -2,7 +2,7 @@
 layout: default
 title: Deveb'e Hoş Geldiniz
 ---
-<p>
+<p style="font-size: 1.5em;margin-bottom: 30px;font-weight: 300;">
   Deveb, ağ geliştiricileri (web developers) için geliştirilen önyüz çatısıdır.
   Ağ geliştiricileri (web developers) ve adayları, alışılmış olanın ötesine geçmeye
   hazırlanın. Yeni bir soluk getiren Deveb ile tanışmak üzeresiniz. Özellikleriyle
@@ -39,31 +39,40 @@ title: Deveb'e Hoş Geldiniz
 
 <p></p>
 
-<h1>Genel Sınıflar Değil, Veri Niteliği Sınıfları Tanımladık!</h1>
-<p>Deveb "html class" diye bilinen sınıf özelliğini bir kenara koyuyor. Yani bu alanı Deveb'i kullanmak isteyen ağ geliştiricileri için boşaltıyor. Peki bir geliştirici Deveb'i nasıl kullanacak? Deveb'in özellikleri "data-attr" olarak bilinen veri niteliği ile birlikte kullanılmaktadır.</p>
-<p>Deveb'i karşınıza koyduğunuzda gözünüze çarpacak olan ilk kural ekran ölçeklerinin veri niteliği olarak tanımlandırılabilmesi olacak. Bu şu demek oluyor; her ekran ölçeğini bir veri niteliği olarak tanımlayıp içine sınıfları yazabileceksiniz. Böylelikle ekran ölçeklerine hakimiyetiniz kolaylaşacak. Tasarımlarınızı yaparken bunu daha iyi fark edeceksiniz. Dikkatinizi çekmek istediğimiz nokta diğer önyüz çatılarında sınıflarla çalışırken her şeyi bir arada yazmanız gerekir. Bunların yanına harici olarak oluşturulmuş sınıfları eklediğinizde her şey iç içe girmeye başlar. CSS tarafında bunlara söz geçirmek teknik olarak sorunsuz olsa da Deveb'teki gibi kullanım etkilerine ve kolaylıklarına her zaman sahip olmaz. Örneğin Deveb diğer önyüz çatılarıyla çakışmadan bir arada kullanılabilir. Diğerleri benzer sınıf terimleri kullandığı için düzeltmeler yapmak zorunluğuyla karşı karşıya kalma olasılığına her zaman sahip olacaksınız.</p>
+<h1>Nasıl Kurulur?</h1>
+<p>
+  Deveb kurulumu oldukça basittir. En son yayınlanmış kararlı sürümünü edinin.
+  CSS ve gereklilik durumunda JavaScript dosyasını projenize dahil edin. Daha fazlası
+  için <a href="/belgeler/kurulum.html">kurulum sayfasını</a> inceleyin.
+</p>
+<h1> Kap Örgüsü Çoklu Düzende</h1>
+<p>
+  Nasıl ya? Evet doğru duydunuz. Dilediğiniz an 12'li, 18'li, 10'lu, 24'lü kap örgüsü
+  kurabiliyorsunuz. Bunun için CSS dosyalarına müdahale etmeniz gerekmiyor. Evet
+  aynı sayfa içinde çoklu düzen kurabilirsiniz. Heyecanlandırıcı, değil mi? Daha
+  fazla bilgi için <a href="/belgeler/kap-orgusu.html">kap örgüsü sayfalarına</a> bakabilirsiniz.
+</p>
+
+<h1>Yeni Şeyler Var!</h1>
+<p>
+  Deveb her şeyi "html class" diye bilinen html sınıflarına tıkmıyor. Peki bir
+  geliştirici Deveb'i nasıl kullanacak? Deveb'in özellikleri "data-attr" olarak
+  bilinen özel veri niteliği ile birlikte kullanılmaktadır. Bunların yanında dikkat
+  etmenizi istediğimiz bazı şeyler var;
+</p>
+
+<p>
+  Deveb'i karşınıza koyduğunuzda gözünüze çarpacak olan ilk kural ekran ölçeklerinin
+  veri niteliği olarak tanımlandırılabilmesi olacak. Bu şu demek oluyor; her ekran
+  ölçeğini bir veri niteliği olarak tanımlayıp içine değerleri yazabileceksiniz.
+  Böylelikle ekran ölçeklerine söz geçirmeniz kolaylaşacak. Tasarımlarınızı yaparken
+  bunu daha iyi fark edeceksiniz. Dikkatinizi çekmek istediğimiz nokta diğer önyüz
+  çatılarında sınıflarla çalışırken her şeyi bir arada yazmanız gerekir. Bunların
+  yanına harici olarak oluşturulmuş sınıfları eklediğinizde her şey iç içe girmeye başlar.
+  CSS tarafında bunlara söz geçirmek teknik olarak sorunsuz olsa da Deveb'teki gibi
+  kullanım etkilerine ve kolaylıklarına her zaman sahip olmaz. Örneğin Deveb diğer
+  önyüz çatılarıyla çakışmadan bir arada kullanılabilir. Diğerleri benzer sınıf
+  terimleri kullandığı için düzeltmeler yapmak zorunluğuyla karşı karşıya kalma
+  olasılığına her zaman sahip olacaksınız.
+</p>
 <p>Deveb'in veri niteliği yöntemini kullanmasının birkaç sebebini okudunuz. Biraz da ekran ölçeklerinden bahsedelim.</p>
-<h1>Ekran Ölçeklerine Göre Sınıfları Kullanın</h1>
-<p>Ekran ölçekleri söz konusu olunca ilk akla gelen akıllı telefonlar, tabletler, dizüstü ve masaüstü ekranlar. Deveb bu seçenekleri biraz daha genişletmiş durumda. Yani kol saati kadar ekranların üretilme ihtimalini göz önünde bile bulundurarak "minik ekranlar" terimine bir karşılık verebilir durumda. Hatta "büyük ekranlar" terimiyle bitirmeyip "koca(man) ekran", "dev ekran" terimleri içinde karşılığı bulunmaktadır. Gelin ekran terimlerini hem İngilizce hem Türkçe olarak açıklayalım.</p>
-<p>Diğer önyüz çatılarında ekran ölçeklerini sınıflarla birlikte kullanırsınız. Deveb'de ise ekran ölçeği veri niteliği (data-attr) olarak tanımlandığı için yapmak istediklerinizi veri niteliğinin içinde belirtirsiniz. Hangi ekran ölçeğini kullanacağınızı belirttiğiniz veri niteliğinde şu an kap örgüsünün özelliklerini kullanabilmektesiniz. Öncesinde ekran ölçeklerinin isimlendirilişine bakalım.</p>
-<p></p>
-<div data-gnl="24 24p uzat">
-  <div data-gnl="1 1p" data-ort="1 1p"><h2>Türkçe</h2></div>
-  <div data-gnl="1 3p" data-ort="1 8p">minik<br>data-mnk=""</div>
-  <div data-gnl="1 3p" data-ort="1 8p">ufak<br>data-ufk=""</div>
-  <div data-gnl="1 3p" data-ort="1 8p">küçük<br>data-kçk=""</div>
-  <div data-gnl="1 3p" data-ort="1 8p">orta<br>data-ort=""</div>
-  <div data-gnl="1 3p" data-ort="1 8p">büyük<br>data-byk=""</div>
-  <div data-gnl="1 3p" data-ort="1 8p">kocaman<br>data-kcm=""</div>
-  <div data-gnl="1 3p" data-ort="1 8p">dev<br>data-dev=""</div>
-  <div data-gnl="1 1p" data-ort="1 1p"><h2>İngilizce</h2></div>
-  <div data-gnl="1 3p" data-ort="1 8p">tiny<br>data-tny=""</div>
-  <div data-gnl="1 3p" data-ort="1 8p">extra small<br>data-xs=""</div>
-  <div data-gnl="1 3p" data-ort="1 8p">small<br>data-sm=""</div>
-  <div data-gnl="1 3p" data-ort="1 8p">medium<br>data-md=""</div>
-  <div data-gnl="1 3p" data-ort="1 8p">large<br>data-lg=""</div>
-  <div data-gnl="1 3p" data-ort="1 8p">extra large<br>data-xl=""</div>
-  <div data-gnl="1 3p" data-ort="1 8p">huge<br>data-hg=""</div>
-</div>
-<h1>Kap Örgüsünü 1'den 24'e Kadar Aynı Anda Kullanın</h1>
-<p>Nasıl ya? Evet doğru duydunuz. Dilediğiniz an 12'li, 18'li, 10'lu, 24'lü kap örgüsü kurabiliyorsunuz. Bunun için CSS dosyalarına müdahale etmeniz gerekmiyor. Evet aynı sayfa içinde çoklu düzen kurabilirsiniz. Heyecanlandırıcı değil mi? Kap örgüsü keşfedilmeyi bekliyor. Şu an geliştirilmiş haliyle çok başarılı çalışmalar çıkabilirsiniz. Yakında belki yeni özellikler kazanır. ;)</p>
