Tema menüsü süsleniyor

--- a/temalar/ilker/index.html
+++ b/temalar/ilker/index.html
@@ -8,6 +8,7 @@
 
   <!-- Kök -->
   <link href="/temalar/ilker/assets/css/deveb.css" rel="stylesheet">
+  <link href="/temalar/ilker/assets/css/ilker.css" rel="stylesheet">
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
@@ -18,22 +19,18 @@
 <body data-gnl="">
   <header data-gnl="24 24p">
     <div data-gnl="kaplama">
-      <div class="" data-gnl="0">
-        logo
+      <div class="" data-gnl="0 göbekte">
+        İLKER
       </div>
       <nav data-gnl="1g sağda">
         <input id="menü-0by" type="checkbox" data-kapaç="">
         <label for="menü-0by">•••</label>
         <label for="menü-0by">///</label>
         <ul data-menü="basit yatay" data-gnl="sağda">
-          <li><a href="">Öge #1</a></li>
-          <li><a href="">Öge #2</a></li>
-          <li><a href="">Öge #3</a></li>
-          <li><a href="">Öge #4</a></li>
-          <li><a href="">Öge #5</a></li>
-          <li><a href="">Öge #6</a></li>
-          <li><a href="">Öge #7</a></li>
-          <li><a href="">Öge #8</a></li>
+          <li><a href="#">Anasayfa</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Hakkımızda</a></li>
+          <li><a href="#">İletişim</a></li>
         </ul>
       </nav>
     </div>
