--- a/temalar/ilker/index.html
+++ b/temalar/ilker/index.html
@@ -17,7 +17,7 @@
   <![endif]-->
 </head>
 <body data-gnl="">
-  <header data-gnl="24 24p">
+  <header data-gnl="1 1p">
     <div data-gnl="kaplama">
       <div class="" data-gnl="0 göbekte">
         İLKER
@@ -35,12 +35,17 @@
       </nav>
     </div>
   </header>
-  <article data-gnl="24 24p">
+  <div data-gnl="1 1p" class="alan">
+    <div data-gnl="kaplama">
+      Arkaplanı renkli alan
+    </div>
+  </div>
+  <article data-gnl="1 1p">
     <div data-gnl="kaplama">
     Yazılar
     </div>
   </article>
-  <footer data-gnl="24 24p">
+  <footer data-gnl="1 1p">
     <div data-gnl="kaplama">
       Burası Site Altı
     </div>
