--- a/temalar/ilker/index.html
+++ b/temalar/ilker/index.html
@@ -19,17 +19,18 @@
 <body data-gnl="">
   <header data-gnl="1 1p">
     <div data-gnl="kaplama">
-      <div class="" data-gnl="0 göbekte">
-        İLKER
-      </div>
-      <nav data-gnl="1g sağda">
-        <input id="menü-0by" type="checkbox" data-kapaç="">
+      <nav>
+        <div class="" data-gnl="0 göbekte">
+          İLKER
+        </div>
+        <input id="menü-0by" type="checkbox" data-kapaç="sağda">
         <label for="menü-0by">•••</label>
-        <label for="menü-0by">///</label>
-        <ul data-menü="basit yatay" data-gnl="sağda">
+        <label for="menü-0by">✕</label>
+        <ul data-menü="basit yatay" data-gnl="solda" data-kçk="sağda">
           <li><a href="#">Anasayfa</a></li>
           <li><a href="#">Blog</a></li>
           <li><a href="#">Hakkımızda</a></li>
+          <li><a href="#">İletişim</a></li>
           <li><a href="#">İletişim</a></li>
         </ul>
       </nav>
