--- a/temalar/sosero/index.html
+++ b/temalar/sosero/index.html
@@ -32,9 +32,10 @@
       </nav>
     </div>
     <div class="main" data-gnl="1g 1nc ortada sığdır" data-kçk="kaymadan">
-      <div data-gnl="1 1p" data-kçk="1 2p ortada" data-arka="birincil parlak">
-        <div data-gnl="6 7p">
-          <a href="#"><img src="http://via.placeholder.com/150x150"></a>
+      <div data-gnl="1 1p" data-kçk="1 2p ortada">
+        <img src="/temalar/sosero/assets/img/domates_corbasi.jpg" alt="Domates Çorbası">
+        <div data-gnl="6 7p" style="position: absolute;left: 4%;height: 100%;">
+          <a href="#"><img src="/temalar/sosero/assets/img/sosero.png" alt="SOSERO"></a>
           <nav data-gnl="altta-ol">
             <ul data-menü="basit yatay">
               <li><a href="#">Fac</a></li>
@@ -46,7 +47,7 @@
         </div>
 
       </div>
-      <div data-gnl="1 1p  ortada" data-kçk="1 2p sığdır" data-arka="birincil soluk">
+      <div data-gnl="1 1p  ortada" data-kçk="1 2p sığdır">
         <div data-gnl="22 23p">
           <article class="yemek">
             <h1 class="yemek-adi">Domates Çorbası</h1>
