--- a/temalar/sosero/index.html
+++ b/temalar/sosero/index.html
@@ -17,6 +17,9 @@
   <![endif]-->
 </head>
 <body data-gnl="sütun sığdır">
+  <header data-gnl="0 soldan-1 24p-aralık" style="position:absolute; z-index:999;">
+    <a href="#"><img src="/temalar/sosero/assets/img/sosero.png" alt="SOSERO"></a>
+  </header>
   <div data-gnl="1 1p sığdır">
     <div class="main-menu" data-gnl="0 göbekte 2nc">
       <nav>
@@ -32,46 +35,59 @@
       </nav>
     </div>
     <div class="main" data-gnl="1g 1nc ortada sığdır" data-kçk="kaymadan">
-      <div data-gnl="1 1p" data-kçk="1 2p ortada">
-        <img src="/temalar/sosero/assets/img/domates_corbasi.jpg" alt="Domates Çorbası">
-        <div data-gnl="6 7p" style="position: absolute;left: 4%;height: 100%;">
-          <a href="#"><img src="/temalar/sosero/assets/img/sosero.png" alt="SOSERO"></a>
-          <nav data-gnl="altta-ol">
-            <ul data-menü="basit yatay">
-              <li><a href="#">Fac</a></li>
-              <li><a href="#">Twi</a></li>
-              <li><a href="#">Ins</a></li>
-              <li><a href="#">Goo</a></li>
-            </ul>
-          </nav>
-        </div>
-
+      <div data-gnl="1 1p" data-kçk="1 2p ortada kaymadan">
+        <img src="/temalar/sosero/assets/img/domates_corbasi.jpg" style="width:auto; height:100%;display: block;max-width: 1000%;" alt="Domates Çorbası">
       </div>
-      <div data-gnl="1 1p  ortada" data-kçk="1 2p sığdır">
-        <div data-gnl="22 23p">
+      <div data-gnl="1 1p" data-kçk="1 2p sığdır" style="z-index:1000;">
+        <div data-gnl="18 24p soldan-1 24p-aralık">
           <article class="yemek">
-            <h1 class="yemek-adi">Domates Çorbası</h1>
+            <h1 class="yemek-adi">DOMATES ÇORBASI</h1>
             <div class="yemek-içeriği">
 
               <h2>Malzemeler</h2>
               <ul>
-                <li>Maddeler 1</li>
-                <li>Maddeler 2</li>
-                <li>Maddeler 3</li>
-                <li>Maddeler 4</li>
-                <li>Maddeler 5</li>
+                <li>5 adet büyük boy sulu domates</li>
+                <li>1 yemek kaşığı salça</li>
+                <li>1 diş sarımsak</li>
+                <li>1 yemek kaşığı un</li>
+                <li>1 yemek kaşığı Yeşil Akçaabat tereyağı</li>
+                <li>4 su bardağı sıcak et suyu</li>
+                <li>2 çay bardağı sıcak süt</li>
               </ul>
-              <h2>Sunumu için</h2>
-              <p>İnsanları canlandıran ümit ve güzel hayaldir. Ümidini kaybetmiş olanın, başka kaybedecek şeyi olmaz. Güzel gören güzel düşünür, güzel düşünen hayatından tat alır. Güzel sözler petekten damla damla sızan bala benzer. İstediğini söyleyen, istemediğini işitir. </p>
-              <h2>Hazırlanışı</h2>
-              <p>İnsanları canlandıran ümit ve güzel hayaldir. Ümidini kaybetmiş olanın, başka kaybedecek şeyi olmaz. Güzel gören güzel düşünür, güzel düşünen hayatından tat alır. Güzel sözler petekten damla damla sızan bala benzer. İstediğini söyleyen, istemediğini işitir. </p>
-              <p>İnsanları canlandıran ümit ve güzel hayaldir. Ümidini kaybetmiş olanın, başka kaybedecek şeyi olmaz. Güzel gören güzel düşünür, güzel düşünen hayatından tat alır. Güzel sözler petekten damla damla sızan bala benzer. İstediğini söyleyen, istemediğini işitir. </p>
+
+              <h2>Sunumu/Servisi için:</h2>
+              <ul>
+                <li>1 su bardağı rendelenmiş kaşar peyniri</li>
+              </ul>
+
+              <h2>Hazırlanışı:</h2>
+              <p>
+                Tereyağını bir tavada eritin. Unu ekleyip kokusu çıkana kadar kısık
+                ateşte, tereyağında kavurun, ardından salçayı ekleyin.
+                Kabuğunu soyduğunuz domatesleri rendeleyin ve kavrulmuş un karışımına
+                ekledikten sonra 5 dakika kadar pişirin. Bir diş sarımsağı da rendenin
+                ince tarafıyla rendeleyin. Üzerine sıcak et suyunu ilave edin. Kesilmemesi
+                için küçük bir cezvede ısıttığınız sütü azar azar ekleyip hızlıca
+                karıştırın. Çorbayı kaynayana kadar orta ateşte ardından da kısık
+                ateşte 15 dakika kadar pişirin. Servis kaselerine aldığınız çorbayı
+                rendelenmiş kaşar peyniri ilavesiyle sıcak olarak servis edin. Afiyet
+                olsun.
+              </p>
             </div>
           </article>
-
         </div>
       </div>
     </div>
   </div>
+  <footer data-gnl="0 soldan-1 24p-aralık" style="position:absolute; bottom:0; z-index:999;">
+    <nav data-gnl="altta-ol">
+      <ul data-menü="basit yatay">
+        <li><a href="#">Fac</a></li>
+        <li><a href="#">Twi</a></li>
+        <li><a href="#">Ins</a></li>
+        <li><a href="#">Goo</a></li>
+      </ul>
+    </nav>
+  </footer>
 </body>
 </html>
