--- a/temalar/sosero/index.html
+++ b/temalar/sosero/index.html
@@ -17,10 +17,10 @@
   <![endif]-->
 </head>
 <body data-gnl="sütun sığdır">
-  <header data-gnl="0 soldan-1 24p-aralık" style="position:absolute; z-index:999;">
-    <a href="#"><img src="/temalar/sosero/assets/img/sosero.png" alt="SOSERO"></a>
-  </header>
-  <div data-gnl="1 1p sığdır">
+  <div data-gnl="1 1p" data-kçk="sığdır">
+    <header data-gnl="0 soldan-1 24p-aralık" style="position:absolute; z-index:999;">
+      <a  data-gnl="1 2p" data-kçk="0" href="#"><img src="/temalar/sosero/assets/img/sosero.png" alt="SOSERO"></a>
+    </header>
     <div class="main-menu" data-gnl="0 göbekte 2nc">
       <nav>
         <input id="menü-0by" type="checkbox" data-kapaç="sağda">
@@ -78,16 +78,16 @@
         </div>
       </div>
     </div>
+    <footer data-gnl="0 soldan-1 24p-aralık" style="position:absolute; bottom:0; z-index:999;">
+      <nav data-gnl="altta-ol">
+        <ul data-menü="basit yatay">
+          <li><a href="#">Fac</a></li>
+          <li><a href="#">Twi</a></li>
+          <li><a href="#">Ins</a></li>
+          <li><a href="#">Goo</a></li>
+        </ul>
+      </nav>
+    </footer>
   </div>
-  <footer data-gnl="0 soldan-1 24p-aralık" style="position:absolute; bottom:0; z-index:999;">
-    <nav data-gnl="altta-ol">
-      <ul data-menü="basit yatay">
-        <li><a href="#">Fac</a></li>
-        <li><a href="#">Twi</a></li>
-        <li><a href="#">Ins</a></li>
-        <li><a href="#">Goo</a></li>
-      </ul>
-    </nav>
-  </footer>
 </body>
 </html>
