--- a/temalar/sosero/index.html
+++ b/temalar/sosero/index.html
@@ -18,15 +18,18 @@
 </head>
 <body data-gnl="sütun sığdır">
   <div data-gnl="1 1p" data-kçk="sığdır">
-    <header data-gnl="0 soldan-1 24p-aralık" style="position:absolute; z-index:999;">
-      <a  data-gnl="1 2p" data-kçk="0" href="#"><img src="/temalar/sosero/assets/img/sosero.png" alt="SOSERO"></a>
+    <header data-gnl="23 24p soldan-1 24p-aralık" data-kçk="0" style="position:absolute; z-index:999;">
+      <a  data-gnl="1 3p" data-kçk="0" href="#"><img src="/temalar/sosero/assets/img/sosero.png" alt="SOSERO"></a>
+      <input id="menü-ana-çapraz" checked="" name="ana-menü" data-kapaç="sağda çaprazlama" type="radio">
+      <label for="menü-ana" data-gnl="0 sağdan-1 24p">•••</label>
+      <label for="menü-ana-çapraz" data-gnl="0 sağdan-1 24p">///</label>
     </header>
     <div class="main-menu" data-gnl="0 göbekte 2nc">
       <nav>
-        <input id="menü-0by" type="checkbox" data-kapaç="sağda">
-        <label for="menü-0by">•••</label>
-        <label for="menü-0by">✕</label>
-        <ul data-menü="basit dikey sağ-kaval" data-gnl="solda" data-kçk="sağda">
+        <input id="menü-ana" name="ana-menü" data-kapaç="çaprazlama gizle" type="radio">
+        <label for="menü-ana">•••</label>
+        <label for="menü-ana-çapraz">✕</label>
+        <ul data-menü="dikey sağ-kaval" data-gnl="solda" data-kçk="sağda">
           <li><a href="#">◘­◘­◘­<span>Anasayfa</span></a></li>
           <li><a href="#">◘­◘­◘­<span>Blog</span></a></li>
           <li><a href="#">◘­◘­◘<span>Hakkımızda</span></a></li>
@@ -38,7 +41,7 @@
       <div data-gnl="1 1p" data-kçk="1 2p ortada kaymadan">
         <img src="/temalar/sosero/assets/img/domates_corbasi.jpg" style="width:auto; height:100%;display: block;max-width: 1000%;" alt="Domates Çorbası">
       </div>
-      <div data-gnl="1 1p" data-kçk="1 2p sığdır" style="z-index:1000;">
+      <div data-gnl="1 1p" data-kçk="1 2p sığdır">
         <div data-gnl="18 24p soldan-1 24p-aralık">
           <article class="yemek">
             <h1 class="yemek-adi">DOMATES ÇORBASI</h1>
