--- a/temalar/sosero/index.html
+++ b/temalar/sosero/index.html
@@ -1,96 +1,12 @@
-<!DOCTYPE html>
-<html lang="tr">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Sosero</title>
-
-  <!-- Kök -->
-  <link href="/temalar/sosero/assets/css/deveb.css" rel="stylesheet">
-  <link href="/temalar/sosero/assets/css/sosero.css" rel="stylesheet">
-  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-  <!--[if lt IE 9]>
-  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-  <![endif]-->
-</head>
-<body data-gnl="sütun sığdır">
-  <div data-gnl="1 1p" data-kçk="sığdır">
-    <header data-gnl="23 24p soldan-1 24p-aralık" data-kçk="0" style="position:absolute; z-index:999;">
-      <a  data-gnl="1 3p" data-kçk="0" href="#"><img src="/temalar/sosero/assets/img/sosero.png" alt="SOSERO"></a>
-      <input id="menü-ana-çapraz" checked="" name="ana-menü" data-kapaç="sağda çaprazlama" type="radio">
-      <label for="menü-ana" data-gnl="0 sağdan-1 24p">•••</label>
-      <label for="menü-ana-çapraz" data-gnl="0 sağdan-1 24p">///</label>
-    </header>
-    <div class="main-menu" data-gnl="0 göbekte 2nc">
-      <nav>
-        <input id="menü-ana" name="ana-menü" data-kapaç="çaprazlama gizle" type="radio">
-        <label for="menü-ana">•••</label>
-        <label for="menü-ana-çapraz">✕</label>
-        <ul data-menü="dikey sağ-kaval" data-gnl="solda" data-kçk="sağda">
-          <li><a href="#">◘­◘­◘­<span>Anasayfa</span></a></li>
-          <li><a href="#">◘­◘­◘­<span>Blog</span></a></li>
-          <li><a href="#">◘­◘­◘<span>Hakkımızda</span></a></li>
-          <li><a href="#">◘­◘­◘<span>İletişim</span></a></li>
-        </ul>
-      </nav>
-    </div>
-    <div class="main" data-gnl="1g 1nc ortada sığdır" data-kçk="kaymadan">
-      <div data-gnl="1 1p" data-kçk="1 2p ortada kaymadan">
-        <img src="/temalar/sosero/assets/img/domates_corbasi.jpg" style="width:auto; height:100%;display: block;max-width: 1000%;" alt="Domates Çorbası">
-      </div>
-      <div data-gnl="1 1p" data-kçk="1 2p sığdır">
-        <div data-gnl="18 24p soldan-1 24p-aralık">
-          <article class="yemek">
-            <h1 class="yemek-adi">DOMATES ÇORBASI</h1>
-            <div class="yemek-içeriği">
-
-              <h2>Malzemeler</h2>
-              <ul>
-                <li>5 adet büyük boy sulu domates</li>
-                <li>1 yemek kaşığı salça</li>
-                <li>1 diş sarımsak</li>
-                <li>1 yemek kaşığı un</li>
-                <li>1 yemek kaşığı Yeşil Akçaabat tereyağı</li>
-                <li>4 su bardağı sıcak et suyu</li>
-                <li>2 çay bardağı sıcak süt</li>
-              </ul>
-
-              <h2>Sunumu/Servisi için:</h2>
-              <ul>
-                <li>1 su bardağı rendelenmiş kaşar peyniri</li>
-              </ul>
-
-              <h2>Hazırlanışı:</h2>
-              <p>
-                Tereyağını bir tavada eritin. Unu ekleyip kokusu çıkana kadar kısık
-                ateşte, tereyağında kavurun, ardından salçayı ekleyin.
-                Kabuğunu soyduğunuz domatesleri rendeleyin ve kavrulmuş un karışımına
-                ekledikten sonra 5 dakika kadar pişirin. Bir diş sarımsağı da rendenin
-                ince tarafıyla rendeleyin. Üzerine sıcak et suyunu ilave edin. Kesilmemesi
-                için küçük bir cezvede ısıttığınız sütü azar azar ekleyip hızlıca
-                karıştırın. Çorbayı kaynayana kadar orta ateşte ardından da kısık
-                ateşte 15 dakika kadar pişirin. Servis kaselerine aldığınız çorbayı
-                rendelenmiş kaşar peyniri ilavesiyle sıcak olarak servis edin. Afiyet
-                olsun.
-              </p>
-            </div>
-          </article>
-        </div>
-      </div>
-    </div>
-    <footer data-gnl="0 soldan-1 24p-aralık" style="position:absolute; bottom:0; z-index:999;">
-      <nav data-gnl="altta-ol">
-        <ul data-menü="basit yatay">
-          <li><a href="#">Fac</a></li>
-          <li><a href="#">Twi</a></li>
-          <li><a href="#">Ins</a></li>
-          <li><a href="#">Goo</a></li>
-        </ul>
-      </nav>
-    </footer>
-  </div>
-</body>
-</html>
+---
+layout: sosero/giri
+title: SOSERO
+---
+<p></p>
+<p></p>
+<img data-gnl="8 9p ortada-ol" data-kçk="1 4p" src="/temalar/sosero/assets/img/ögeler.png" alt="">
+<p data-gnl="1 1p ortada metin-ortada">
+  <a href="index02.html">
+    ÖZEL LEZZETLERİMİZİ<br>HEMEN KEŞFEDİN
+  </a>
+</p>
