--- a/temalar/sosero/index03.html
+++ b/temalar/sosero/index03.html
@@ -1,70 +1,48 @@
-<!DOCTYPE html>
-<html lang="tr">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Sosero</title>
+---
+layout: sosero/default
+title: SOSERO
+---
 
-  <!-- Kök -->
-  <link href="/temalar/sosero/assets/css/deveb.css" rel="stylesheet">
-  <link href="/temalar/sosero/assets/css/sosero.css" rel="stylesheet">
-  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-  <!--[if lt IE 9]>
-  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-  <![endif]-->
-</head>
-<body data-gnl="sütun sığdır">
-  <div data-gnl="1 1p sığdır">
-    <div class="main-menu" data-gnl="0 göbekte 2nc">
-      <nav>
-        <input id="menü-0by" type="checkbox" data-kapaç="sağda">
-        <label for="menü-0by">•••</label>
-        <label for="menü-0by">✕</label>
-        <ul data-menü="basit dikey sağ-kaval" data-gnl="solda" data-kçk="sağda">
-          <li><a href="#">◘­◘­◘­<span>Anasayfa</span></a></li>
-          <li><a href="#">◘­◘­◘­<span>Blog</span></a></li>
-          <li><a href="#">◘­◘­◘<span>Hakkımızda</span></a></li>
-          <li><a href="#">◘­◘­◘<span>İletişim</span></a></li>
-        </ul>
-      </nav>
-    </div>
-    <div class="main" data-gnl="1g 1nc ortada sığdır" data-kçk="kaymadan">
-      <div data-gnl="1 1p  ortada" data-kçk="sığdır" data-arka="birincil soluk">
-        <div data-gnl="22 23p">
-          <article class="product" data-gnl="1 1p sütun" style="justify-content:space-between;">
-            <h1 class="product-name">Domates Çorbası</h1>
-            <div class="product-content" data-gnl="1 1p kaymadan"  style="max-height:70vh;">
-              <div data-gnl="1 1p" data-kçk="1 2p sığdır" data-arka="kırmızı parlak">
-                resim
-              </div>
-              <div data-gnl="1 1p ortada" data-kçk="1 2p sığdır" data-arka="ikincil parlak">
-                <div data-gnl="6 7p" style="padding-bottom:40px;">
-                  <h1>Közlenmiş Biber</h1>
-                  <ul>
-                    <li>Maddeler 1</li>
-                    <li>Maddeler 2</li>
-                    <li>Maddeler 3</li>
-                    <li>Maddeler 4</li>
-                    <li>Maddeler 5</li>
-                  </ul>
-                  <h2>Sunumu için</h2>
-                  <p>İnsanları canlandıran ümit ve güzel hayaldir. Ümidini kaybetmiş olanın, başka kaybedecek şeyi olmaz. Güzel gören güzel düşünür, güzel düşünen hayatından tat alır. Güzel sözler petekten damla damla sızan bala benzer. İstediğini söyleyen, istemediğini işitir. </p>
-                  <h2>Hazırlanışı</h2>
-                  <p>İnsanları canlandıran ümit ve güzel hayaldir. Ümidini kaybetmiş olanın, başka kaybedecek şeyi olmaz. Güzel gören güzel düşünür, güzel düşünen hayatından tat alır. Güzel sözler petekten damla damla sızan bala benzer. İstediğini söyleyen, istemediğini işitir. </p>
-                  <p>İnsanları canlandıran ümit ve güzel hayaldir. Ümidini kaybetmiş olanın, başka kaybedecek şeyi olmaz. Güzel gören güzel düşünür, güzel düşünen hayatından tat alır. Güzel sözler petekten damla damla sızan bala benzer. İstediğini söyleyen, istemediğini işitir. </p>
+      <div data-gnl="1 1p" data-kçk="1 2p ortada kaymadan">
+        <img src="/temalar/sosero/assets/img/domates_corbasi.jpg" style="width:auto; height:100%;display: block;max-width: 1000%;" alt="Domates Çorbası">
+      </div>
+      <div data-gnl="1 1p" data-kçk="1 2p sığdır">
+        <div data-gnl="18 24p soldan-1 24p-aralık">
+          <article class="yemek">
+            <h1 class="yemek-adi">DOMATES ÇORBASI</h1>
+            <div class="yemek-içeriği">
 
-                </div>
-              </div>
+              <h2>Malzemeler</h2>
+              <ul>
+                <li>5 adet büyük boy sulu domates</li>
+                <li>1 yemek kaşığı salça</li>
+                <li>1 diş sarımsak</li>
+                <li>1 yemek kaşığı un</li>
+                <li>1 yemek kaşığı Yeşil Akçaabat tereyağı</li>
+                <li>4 su bardağı sıcak et suyu</li>
+                <li>2 çay bardağı sıcak süt</li>
+              </ul>
+
+              <h2>Sunumu/Servisi için:</h2>
+              <ul>
+                <li>1 su bardağı rendelenmiş kaşar peyniri</li>
+              </ul>
+
+              <h2>Hazırlanışı:</h2>
+              <p>
+                Tereyağını bir tavada eritin. Unu ekleyip kokusu çıkana kadar kısık
+                ateşte, tereyağında kavurun, ardından salçayı ekleyin.
+                Kabuğunu soyduğunuz domatesleri rendeleyin ve kavrulmuş un karışımına
+                ekledikten sonra 5 dakika kadar pişirin. Bir diş sarımsağı da rendenin
+                ince tarafıyla rendeleyin. Üzerine sıcak et suyunu ilave edin. Kesilmemesi
+                için küçük bir cezvede ısıttığınız sütü azar azar ekleyip hızlıca
+                karıştırın. Çorbayı kaynayana kadar orta ateşte ardından da kısık
+                ateşte 15 dakika kadar pişirin. Servis kaselerine aldığınız çorbayı
+                rendelenmiş kaşar peyniri ilavesiyle sıcak olarak servis edin. Afiyet
+                olsun.
+              </p>
             </div>
-            <div class="boş"></div>
           </article>
-
         </div>
       </div>
-    </div>
-  </div>
-</body>
-</html>
+    
