--- a/temalar/sosero/index03.html
+++ b/temalar/sosero/index03.html
@@ -1,5 +1,5 @@
 ---
-layout: sosero/default
+layout: sosero/icerik
 title: SOSERO
 ---
 
@@ -45,4 +45,3 @@ title: SOSERO
           </article>
         </div>
       </div>
-    
