--- a/temalar/sosero/index04.html
+++ b/temalar/sosero/index04.html
@@ -1,70 +1,39 @@
-<!DOCTYPE html>
-<html lang="tr">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Sosero</title>
+---
+layout: sosero/icerik
+title: SOSERO
+---
+<div data-gnl="1 1p" data-kçk="1 2p ortada kaymadan">
+  <img src="/temalar/sosero/assets/img/üretim_tesisleri.jpg" style="width:auto; height:100%;display: block;max-width: 1000%;" alt="Üretim Tesisleri">
+</div>
+<div data-gnl="1 1p" data-kçk="1 2p sığdır">
+  <div data-gnl="18 24p soldan-1 24p-aralık">
+    <article class="yemek">
+      <h1 class="yemek-adi">ÜRETİM TESİSLERİ</h1>
+      <div class="yemek-içeriği">
 
-  <!-- Kök -->
-  <link href="/temalar/sosero/assets/css/deveb.css" rel="stylesheet">
-  <link href="/temalar/sosero/assets/css/sosero.css" rel="stylesheet">
-  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-  <!--[if lt IE 9]>
-  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-  <![endif]-->
-</head>
-<body data-gnl="sütun sığdır">
-  <div data-gnl="1 1p sığdır">
-    <div class="main-menu" data-gnl="0 göbekte 2nc">
-      <nav>
-        <input id="menü-0by" type="checkbox" data-kapaç="sağda">
-        <label for="menü-0by">•••</label>
-        <label for="menü-0by">✕</label>
-        <ul data-menü="basit dikey sağ-kaval" data-gnl="solda" data-kçk="sağda">
-          <li><a href="#">◘­◘­◘­<span>Anasayfa</span></a></li>
-          <li><a href="#">◘­◘­◘­<span>Blog</span></a></li>
-          <li><a href="#">◘­◘­◘<span>Hakkımızda</span></a></li>
-          <li><a href="#">◘­◘­◘<span>İletişim</span></a></li>
-        </ul>
-      </nav>
-    </div>
-    <div class="main" data-gnl="1g 1nc ortada sığdır" data-kçk="kaymadan">
-      <div data-gnl="1 1p  ortada" data-kçk="sığdır" data-arka="birincil soluk">
-        <div data-gnl="22 23p">
-          <article class="product" data-gnl="1 1p sütun" style="justify-content:space-between;">
-            <h1 class="product-name">Domates Çorbası</h1>
-            <div class="product-content" data-gnl="1 1p kaymadan"  style="max-height:70vh;">
-              <div data-gnl="1 1p" data-kçk="1 2p sığdır" data-arka="kırmızı parlak">
-                resim
-              </div>
-              <div data-gnl="1 1p ortada" data-kçk="1 2p sığdır" data-arka="ikincil parlak">
-                <div data-gnl="6 7p" style="padding-bottom:40px;">
-                  <h1>Közlenmiş Biber</h1>
-                  <ul>
-                    <li>Maddeler 1</li>
-                    <li>Maddeler 2</li>
-                    <li>Maddeler 3</li>
-                    <li>Maddeler 4</li>
-                    <li>Maddeler 5</li>
-                  </ul>
-                  <h2>Sunumu için</h2>
-                  <p>İnsanları canlandıran ümit ve güzel hayaldir. Ümidini kaybetmiş olanın, başka kaybedecek şeyi olmaz. Güzel gören güzel düşünür, güzel düşünen hayatından tat alır. Güzel sözler petekten damla damla sızan bala benzer. İstediğini söyleyen, istemediğini işitir. </p>
-                  <h2>Hazırlanışı</h2>
-                  <p>İnsanları canlandıran ümit ve güzel hayaldir. Ümidini kaybetmiş olanın, başka kaybedecek şeyi olmaz. Güzel gören güzel düşünür, güzel düşünen hayatından tat alır. Güzel sözler petekten damla damla sızan bala benzer. İstediğini söyleyen, istemediğini işitir. </p>
-                  <p>İnsanları canlandıran ümit ve güzel hayaldir. Ümidini kaybetmiş olanın, başka kaybedecek şeyi olmaz. Güzel gören güzel düşünür, güzel düşünen hayatından tat alır. Güzel sözler petekten damla damla sızan bala benzer. İstediğini söyleyen, istemediğini işitir. </p>
 
-                </div>
-              </div>
-            </div>
-            <div class="boş"></div>
-          </article>
+        <h1>Kartepe Süt ve Süt Ürünleri Fabrikası</h1>
 
-        </div>
+        <p>
+          2011 yılında Türk halkının kaliteli ve hijyenik üretime daha uygun fiyatlar ile ulaşabilmesi amacıyla Kocaeli Kartepe’de açılan süt ve süt ürünleri fabrikası, 2.500 m2 açık alana, 1.000 m2 kapalı alanda üretim yapmaktadır. Yöresel lezzetleri kaliteli ve hijyenik koşullarda tüketiciye ulaştıran Kartepe Süt ve Süt Ürünleri Fabrikası’nda; yoğurt, ayran, tereyağ ve kaymak üretimi yapılmaktadır. Tesisin yıllık kapasitesi 15 bin ton süttür. Peynirci Baba Mağazalarında yer alan günlük pastörize süt, yoğurt, ayran, kaymak ve benzeri ürünler Kartepe Fabrikası’ndan sofralarınıza uzanmaktadır.
+        </p>
+
+        <h2>Adres:</h2>
+        <p>
+          Acısu Mah. Sapanca Yolu Cad. No:627 Kartepe / KOCAELİ
+        </p>
+
+        <h2>Telefon:</h2>
+        <p>
+          0262 354 21 44
+        </p>
+
+        <h2>Faks:</h2>
+        <p>
+          0262 354 21 44
+        </p>
+
       </div>
-    </div>
+    </article>
   </div>
-</body>
-</html>
+</div>
