--- a/temalar/sosero/index04.html
+++ b/temalar/sosero/index04.html
@@ -2,8 +2,8 @@
 layout: sosero/icerik
 title: SOSERO
 ---
-<div data-gnl="1 1p" data-kçk="1 2p ortada kaymadan">
-  <img src="/temalar/sosero/assets/img/üretim_tesisleri.jpg" style="width:auto; height:100%;display: block;max-width: 1000%;" alt="Üretim Tesisleri">
+<div data-gnl="1 1p" data-kçk="1 2p ortada sütun kaymadan">
+  <img class="tam" src="/temalar/sosero/assets/img/üretim_tesisleri.jpg" alt="Üretim Tesisleri">
 </div>
 <div data-gnl="1 1p" data-kçk="1 2p sığdır">
   <div data-gnl="18 24p soldan-1 24p-aralık">
