--- a/temalar/sosero/index02.html
+++ b/temalar/sosero/index02.html
@@ -2,35 +2,52 @@
 layout: sosero/urunler
 title: SOSERO ÜRÜNLER
 ---
-      <div data-gnl="1 1p  ortada" data-kçk="sığdır" data-arka="birincil soluk">
-        <div data-gnl="22 23p">
-          <article class="product" data-gnl="1 1p sütun" style="justify-content:space-between;">
-            <h1 class="product-name">Domates Çorbası</h1>
-            <div class="product-content" data-gnl="1 1p kaymadan"  style="max-height:70vh;">
-              <div data-gnl="1 1p" data-kçk="1 2p sığdır" data-arka="kırmızı parlak">
-                resim
-              </div>
-              <div data-gnl="1 1p ortada" data-kçk="1 2p sığdır" data-arka="ikincil parlak">
-                <div data-gnl="6 7p" style="padding-bottom:40px;">
-                  <h1>Közlenmiş Biber</h1>
-                  <ul>
-                    <li>Maddeler 1</li>
-                    <li>Maddeler 2</li>
-                    <li>Maddeler 3</li>
-                    <li>Maddeler 4</li>
-                    <li>Maddeler 5</li>
-                  </ul>
-                  <h2>Sunumu için</h2>
-                  <p>İnsanları canlandıran ümit ve güzel hayaldir. Ümidini kaybetmiş olanın, başka kaybedecek şeyi olmaz. Güzel gören güzel düşünür, güzel düşünen hayatından tat alır. Güzel sözler petekten damla damla sızan bala benzer. İstediğini söyleyen, istemediğini işitir. </p>
-                  <h2>Hazırlanışı</h2>
-                  <p>İnsanları canlandıran ümit ve güzel hayaldir. Ümidini kaybetmiş olanın, başka kaybedecek şeyi olmaz. Güzel gören güzel düşünür, güzel düşünen hayatından tat alır. Güzel sözler petekten damla damla sızan bala benzer. İstediğini söyleyen, istemediğini işitir. </p>
-                  <p>İnsanları canlandıran ümit ve güzel hayaldir. Ümidini kaybetmiş olanın, başka kaybedecek şeyi olmaz. Güzel gören güzel düşünür, güzel düşünen hayatından tat alır. Güzel sözler petekten damla damla sızan bala benzer. İstediğini söyleyen, istemediğini işitir. </p>
-
-                </div>
-              </div>
-            </div>
-            <div class="boş"></div>
-          </article>
-
+      <div data-gnl="1 1p  ortada" data-kçk="">
+        <div data-gnl="22 23p dürmeden" style="overflow-x:auto;-webkit-overflow-scrolling: touch;">
+          <div class="product-card">
+            <img src="http://via.placeholder.com/200x200" alt="">
+            <h2>AKDENİZ SALATASI</h2>
+            <p>ZEYTİN EZMESİ</p>
+          </div>
+          <div class="product-card">
+            <img src="http://via.placeholder.com/200x200" alt="">
+            <h2>AKDENİZ SALATASI</h2>
+            <p>ZEYTİN EZMESİ</p>
+          </div>
+          <div class="product-card">
+            <img src="http://via.placeholder.com/200x200" alt="">
+            <h2>AKDENİZ SALATASI</h2>
+            <p>ZEYTİN EZMESİ</p>
+          </div>
+          <div class="product-card">
+            <img src="http://via.placeholder.com/200x200" alt="">
+            <h2>AKDENİZ SALATASI</h2>
+            <p>ZEYTİN EZMESİ</p>
+          </div>
+          <div class="product-card">
+            <img src="http://via.placeholder.com/200x200" alt="">
+            <h2>AKDENİZ SALATASI</h2>
+            <p>ZEYTİN EZMESİ</p>
+          </div>
+          <div class="product-card">
+            <img src="http://via.placeholder.com/200x200" alt="">
+            <h2>AKDENİZ SALATASI</h2>
+            <p>ZEYTİN EZMESİ</p>
+          </div>
+          <div class="product-card">
+            <img src="http://via.placeholder.com/200x200" alt="">
+            <h2>AKDENİZ SALATASI</h2>
+            <p>ZEYTİN EZMESİ</p>
+          </div>
+          <div class="product-card">
+            <img src="http://via.placeholder.com/200x200" alt="">
+            <h2>AKDENİZ SALATASI</h2>
+            <p>ZEYTİN EZMESİ</p>
+          </div>
+          <div class="product-card">
+            <img src="http://via.placeholder.com/200x200" alt="">
+            <h2>AKDENİZ SALATASI</h2>
+            <p>ZEYTİN EZMESİ</p>
+          </div>
         </div>
       </div>
