--- a/temalar/sosero/index04.html
+++ b/temalar/sosero/index04.html
@@ -2,8 +2,8 @@
 layout: sosero/icerik
 title: SOSERO
 ---
-<div data-gnl="1 1p" data-kçk="1 2p ortada sütun kaymadan">
-  <img class="tam" src="/temalar/sosero/assets/img/üretim_tesisleri.jpg" alt="Üretim Tesisleri">
+<div data-gnl="1 1p" data-kçk="1 2p ortada sütun kaymadan" style="background: url('/temalar/sosero/assets/img/üretim_tesisleri.jpg') no-repeat center center;background-size:cover;">
+
 </div>
 <div data-gnl="1 1p" data-kçk="1 2p sığdır">
   <div data-gnl="18 24p soldan-1 24p-aralık">
