--- a/temalar/sosero/index02.html
+++ b/temalar/sosero/index02.html
@@ -4,55 +4,138 @@ title: SOSERO ÜRÜNLER
 ---
       <div data-gnl="1 1p  ortada" data-kçk="">
         <div data-gnl="22 23p dürmeden" style="/* overflow-x:auto;-webkit-overflow-scrolling: touch; */">
-
           <section class="regular slider">
-                <div class="product-card">
-                  <img src="http://via.placeholder.com/200x200" alt="">
-                  <h2>AKDENİZ SALATASI</h2>
-                  <p>ZEYTİN EZMESİ</p>
-                </div>
-                <div class="product-card">
-                  <img src="http://via.placeholder.com/200x200" alt="">
-                  <h2>AKDENİZ SALATASI</h2>
-                  <p>ZEYTİN EZMESİ</p>
-                </div>
-                <div class="product-card">
-                  <img src="http://via.placeholder.com/200x200" alt="">
-                  <h2>AKDENİZ SALATASI</h2>
-                  <p>ZEYTİN EZMESİ</p>
-                </div>
-                <div class="product-card">
-                  <img src="http://via.placeholder.com/200x200" alt="">
-                  <h2>AKDENİZ SALATASI</h2>
-                  <p>ZEYTİN EZMESİ</p>
-                </div>
-                <div class="product-card">
-                  <img src="http://via.placeholder.com/200x200" alt="">
-                  <h2>AKDENİZ SALATASI</h2>
-                  <p>ZEYTİN EZMESİ</p>
-                </div>
-                <div class="product-card">
-                  <img src="http://via.placeholder.com/200x200" alt="">
-                  <h2>AKDENİZ SALATASI</h2>
-                  <p>ZEYTİN EZMESİ</p>
-                </div>
-                <div class="product-card">
-                  <img src="http://via.placeholder.com/200x200" alt="">
-                  <h2>AKDENİZ SALATASI</h2>
-                  <p>ZEYTİN EZMESİ</p>
-                </div>
-                <div class="product-card">
-                  <img src="http://via.placeholder.com/200x200" alt="">
-                  <h2>AKDENİZ SALATASI</h2>
-                  <p>ZEYTİN EZMESİ</p>
-                </div>
-                <div class="product-card">
-                  <img src="http://via.placeholder.com/200x200" alt="">
-                  <h2>AKDENİZ SALATASI</h2>
-                  <p>ZEYTİN EZMESİ</p>
-                </div>
-              </section>
+            <div class="product-card" >
+              <div class="product-img">
+                <img src="http://via.placeholder.com/200x200" alt="">
+              </div>
+              <div class="product-imgx"></div>
+              <div class="product-info">
+                <h2>AKDENİZ SALATASI</h2>
+                <p>ZEYTİN EZMESİ</p>
+              </div>
+            </div>
+            <div class="product-card" >
+              <div class="product-img">
+                <img src="http://via.placeholder.com/200x200" alt="">
+              </div>
+              <div class="product-imgx"></div>
+              <div class="product-info">
+                <h2>AKDENİZ SALATASI</h2>
+                <p>ZEYTİN EZMESİ</p>
+              </div>
+            </div>
+            <div class="product-card" >
+              <div class="product-img">
+                <img src="http://via.placeholder.com/200x200" alt="">
+              </div>
+              <div class="product-imgx"></div>
+              <div class="product-info">
+                <h2>AKDENİZ SALATASI</h2>
+                <p>ZEYTİN EZMESİ</p>
+              </div>
+            </div>
+            <div class="product-card" >
+              <div class="product-img">
+                <img src="http://via.placeholder.com/200x200" alt="">
+              </div>
+              <div class="product-imgx"></div>
+              <div class="product-info">
+                <h2>AKDENİZ SALATASI</h2>
+                <p>ZEYTİN EZMESİ</p>
+              </div>
+            </div>
+            <div class="product-card" >
+              <div class="product-img">
+                <img src="http://via.placeholder.com/200x200" alt="">
+              </div>
+              <div class="product-imgx"></div>
+              <div class="product-info">
+                <h2>AKDENİZ SALATASI</h2>
+                <p>ZEYTİN EZMESİ</p>
+              </div>
+            </div>
+            <div class="product-card" >
+              <div class="product-img">
+                <img src="http://via.placeholder.com/200x200" alt="">
+              </div>
+              <div class="product-imgx"></div>
+              <div class="product-info">
+                <h2>AKDENİZ SALATASI</h2>
+                <p>ZEYTİN EZMESİ</p>
+              </div>
+            </div>
+            <div class="product-card" >
+              <div class="product-img">
+                <img src="http://via.placeholder.com/200x200" alt="">
+              </div>
+              <div class="product-imgx"></div>
+              <div class="product-info">
+                <h2>AKDENİZ SALATASI</h2>
+                <p>ZEYTİN EZMESİ</p>
+              </div>
+            </div>
+            <div class="product-card" >
+              <div class="product-img">
+                <img src="http://via.placeholder.com/200x200" alt="">
+              </div>
+              <div class="product-imgx"></div>
+              <div class="product-info">
+                <h2>AKDENİZ SALATASI</h2>
+                <p>ZEYTİN EZMESİ</p>
+              </div>
+            </div>
+            <div class="product-card" >
+              <div class="product-img">
+                <img src="http://via.placeholder.com/200x200" alt="">
+              </div>
+              <div class="product-imgx"></div>
+              <div class="product-info">
+                <h2>AKDENİZ SALATASI</h2>
+                <p>ZEYTİN EZMESİ</p>
+              </div>
+            </div>
+            <div class="product-card" >
+              <div class="product-img">
+                <img src="http://via.placeholder.com/200x200" alt="">
+              </div>
+              <div class="product-imgx"></div>
+              <div class="product-info">
+                <h2>AKDENİZ SALATASI</h2>
+                <p>ZEYTİN EZMESİ</p>
+              </div>
+            </div>
+            <div class="product-card" >
+              <div class="product-img">
+                <img src="http://via.placeholder.com/200x200" alt="">
+              </div>
+              <div class="product-imgx"></div>
+              <div class="product-info">
+                <h2>AKDENİZ SALATASI</h2>
+                <p>ZEYTİN EZMESİ</p>
+              </div>
+            </div>
+            <div class="product-card" >
+              <div class="product-img">
+                <img src="http://via.placeholder.com/200x200" alt="">
+              </div>
+              <div class="product-imgx"></div>
+              <div class="product-info">
+                <h2>AKDENİZ SALATASI</h2>
+                <p>ZEYTİN EZMESİ</p>
+              </div>
+            </div>
+            <div class="product-card" >
+              <div class="product-img">
+                <img src="http://via.placeholder.com/200x200" alt="">
+              </div>
+              <div class="product-imgx"></div>
+              <div class="product-info">
+                <h2>AKDENİZ SALATASI</h2>
+                <p>ZEYTİN EZMESİ</p>
+              </div>
+            </div>
 
-
+          </section>
         </div>
       </div>
