--- a/temalar/sosero/index03.html
+++ b/temalar/sosero/index03.html
@@ -3,8 +3,7 @@ layout: sosero/icerik
 title: SOSERO
 ---
 
-      <div data-gnl="1 1p" data-kçk="1 2p ortada kaymadan">
-        <img src="/temalar/sosero/assets/img/domates_corbasi.jpg" style="width:auto; height:100%;display: block;max-width: 1000%;" alt="Domates Çorbası">
+      <div data-gnl="1 1p" data-kçk="1 2p sütun kaymadan"  style="background: url('/temalar/sosero/assets/img/domates_corbasi.jpg') no-repeat center center;background-size:cover;">
       </div>
       <div data-gnl="1 1p" data-kçk="1 2p sığdır">
         <div data-gnl="18 24p soldan-1 24p-aralık">
