--- a/temalar/sosero/index02.html
+++ b/temalar/sosero/index02.html
@@ -2,17 +2,22 @@
 layout: sosero/urunler
 title: SOSERO ÜRÜNLER
 ---
-      <div data-gnl="1 1p  ortada" data-kçk="">
-        <div data-gnl="22 23p dürmeden" style="/* overflow-x:auto;-webkit-overflow-scrolling: touch; */">
+      <div data-gnl="23 24p soldan-1 24p-aralık ortada" data-kçk="">
+        <div data-gnl="1 1p dürmeden" style="margin-left:-40px;/* overflow-x:auto;-webkit-overflow-scrolling: touch; */">
           <section class="regular slider">
             <div class="product-card" >
               <div class="product-img">
                 <img src="http://via.placeholder.com/200x200" alt="">
               </div>
               <div class="product-imgx"></div>
-              <div class="product-info">
-                <h2>AKDENİZ SALATASI</h2>
-                <p>ZEYTİN EZMESİ</p>
+              <div class="product-info" data-gnl="1 1p">
+                <div data-gnl="1g">
+                  <h2>AKDENİZ SALATASI</h2>
+                  <p>ZEYTİN EZMESİ</p>
+                </div>
+                <div class="open-it" data-gnl="0 göbekte-ol">
+                  +
+                </div>
               </div>
             </div>
             <div class="product-card" >
@@ -20,9 +25,14 @@ title: SOSERO ÜRÜNLER
                 <img src="http://via.placeholder.com/200x200" alt="">
               </div>
               <div class="product-imgx"></div>
-              <div class="product-info">
-                <h2>AKDENİZ SALATASI</h2>
-                <p>ZEYTİN EZMESİ</p>
+              <div class="product-info" data-gnl="1 1p">
+                <div data-gnl="1g">
+                  <h2>AKDENİZ SALATASI</h2>
+                  <p>ZEYTİN EZMESİ</p>
+                </div>
+                <div class="open-it" data-gnl="0 göbekte-ol">
+                  +
+                </div>
               </div>
             </div>
             <div class="product-card" >
@@ -30,9 +40,14 @@ title: SOSERO ÜRÜNLER
                 <img src="http://via.placeholder.com/200x200" alt="">
               </div>
               <div class="product-imgx"></div>
-              <div class="product-info">
-                <h2>AKDENİZ SALATASI</h2>
-                <p>ZEYTİN EZMESİ</p>
+              <div class="product-info" data-gnl="1 1p">
+                <div data-gnl="1g">
+                  <h2>AKDENİZ SALATASI</h2>
+                  <p>ZEYTİN EZMESİ</p>
+                </div>
+                <div class="open-it" data-gnl="0 göbekte-ol">
+                  +
+                </div>
               </div>
             </div>
             <div class="product-card" >
@@ -40,9 +55,14 @@ title: SOSERO ÜRÜNLER
                 <img src="http://via.placeholder.com/200x200" alt="">
               </div>
               <div class="product-imgx"></div>
-              <div class="product-info">
-                <h2>AKDENİZ SALATASI</h2>
-                <p>ZEYTİN EZMESİ</p>
+              <div class="product-info" data-gnl="1 1p">
+                <div data-gnl="1g">
+                  <h2>AKDENİZ SALATASI</h2>
+                  <p>ZEYTİN EZMESİ</p>
+                </div>
+                <div class="open-it" data-gnl="0 göbekte-ol">
+                  +
+                </div>
               </div>
             </div>
             <div class="product-card" >
@@ -50,9 +70,14 @@ title: SOSERO ÜRÜNLER
                 <img src="http://via.placeholder.com/200x200" alt="">
               </div>
               <div class="product-imgx"></div>
-              <div class="product-info">
-                <h2>AKDENİZ SALATASI</h2>
-                <p>ZEYTİN EZMESİ</p>
+              <div class="product-info" data-gnl="1 1p">
+                <div data-gnl="1g">
+                  <h2>AKDENİZ SALATASI</h2>
+                  <p>ZEYTİN EZMESİ</p>
+                </div>
+                <div class="open-it" data-gnl="0 göbekte-ol">
+                  +
+                </div>
               </div>
             </div>
             <div class="product-card" >
@@ -60,9 +85,14 @@ title: SOSERO ÜRÜNLER
                 <img src="http://via.placeholder.com/200x200" alt="">
               </div>
               <div class="product-imgx"></div>
-              <div class="product-info">
-                <h2>AKDENİZ SALATASI</h2>
-                <p>ZEYTİN EZMESİ</p>
+              <div class="product-info" data-gnl="1 1p">
+                <div data-gnl="1g">
+                  <h2>AKDENİZ SALATASI</h2>
+                  <p>ZEYTİN EZMESİ</p>
+                </div>
+                <div class="open-it" data-gnl="0 göbekte-ol">
+                  +
+                </div>
               </div>
             </div>
             <div class="product-card" >
@@ -70,9 +100,14 @@ title: SOSERO ÜRÜNLER
                 <img src="http://via.placeholder.com/200x200" alt="">
               </div>
               <div class="product-imgx"></div>
-              <div class="product-info">
-                <h2>AKDENİZ SALATASI</h2>
-                <p>ZEYTİN EZMESİ</p>
+              <div class="product-info" data-gnl="1 1p">
+                <div data-gnl="1g">
+                  <h2>AKDENİZ SALATASI</h2>
+                  <p>ZEYTİN EZMESİ</p>
+                </div>
+                <div class="open-it" data-gnl="0 göbekte-ol">
+                  +
+                </div>
               </div>
             </div>
             <div class="product-card" >
@@ -80,9 +115,14 @@ title: SOSERO ÜRÜNLER
                 <img src="http://via.placeholder.com/200x200" alt="">
               </div>
               <div class="product-imgx"></div>
-              <div class="product-info">
-                <h2>AKDENİZ SALATASI</h2>
-                <p>ZEYTİN EZMESİ</p>
+              <div class="product-info" data-gnl="1 1p">
+                <div data-gnl="1g">
+                  <h2>AKDENİZ SALATASI</h2>
+                  <p>ZEYTİN EZMESİ</p>
+                </div>
+                <div class="open-it" data-gnl="0 göbekte-ol">
+                  +
+                </div>
               </div>
             </div>
             <div class="product-card" >
@@ -90,9 +130,14 @@ title: SOSERO ÜRÜNLER
                 <img src="http://via.placeholder.com/200x200" alt="">
               </div>
               <div class="product-imgx"></div>
-              <div class="product-info">
-                <h2>AKDENİZ SALATASI</h2>
-                <p>ZEYTİN EZMESİ</p>
+              <div class="product-info" data-gnl="1 1p">
+                <div data-gnl="1g">
+                  <h2>AKDENİZ SALATASI</h2>
+                  <p>ZEYTİN EZMESİ</p>
+                </div>
+                <div class="open-it" data-gnl="0 göbekte-ol">
+                  +
+                </div>
               </div>
             </div>
             <div class="product-card" >
@@ -100,9 +145,14 @@ title: SOSERO ÜRÜNLER
                 <img src="http://via.placeholder.com/200x200" alt="">
               </div>
               <div class="product-imgx"></div>
-              <div class="product-info">
-                <h2>AKDENİZ SALATASI</h2>
-                <p>ZEYTİN EZMESİ</p>
+              <div class="product-info" data-gnl="1 1p">
+                <div data-gnl="1g">
+                  <h2>AKDENİZ SALATASI</h2>
+                  <p>ZEYTİN EZMESİ</p>
+                </div>
+                <div class="open-it" data-gnl="0 göbekte-ol">
+                  +
+                </div>
               </div>
             </div>
             <div class="product-card" >
@@ -110,9 +160,14 @@ title: SOSERO ÜRÜNLER
                 <img src="http://via.placeholder.com/200x200" alt="">
               </div>
               <div class="product-imgx"></div>
-              <div class="product-info">
-                <h2>AKDENİZ SALATASI</h2>
-                <p>ZEYTİN EZMESİ</p>
+              <div class="product-info" data-gnl="1 1p">
+                <div data-gnl="1g">
+                  <h2>AKDENİZ SALATASI</h2>
+                  <p>ZEYTİN EZMESİ</p>
+                </div>
+                <div class="open-it" data-gnl="0 göbekte-ol">
+                  +
+                </div>
               </div>
             </div>
             <div class="product-card" >
@@ -120,9 +175,14 @@ title: SOSERO ÜRÜNLER
                 <img src="http://via.placeholder.com/200x200" alt="">
               </div>
               <div class="product-imgx"></div>
-              <div class="product-info">
-                <h2>AKDENİZ SALATASI</h2>
-                <p>ZEYTİN EZMESİ</p>
+              <div class="product-info" data-gnl="1 1p">
+                <div data-gnl="1g">
+                  <h2>AKDENİZ SALATASI</h2>
+                  <p>ZEYTİN EZMESİ</p>
+                </div>
+                <div class="open-it" data-gnl="0 göbekte-ol">
+                  +
+                </div>
               </div>
             </div>
             <div class="product-card" >
@@ -130,12 +190,16 @@ title: SOSERO ÜRÜNLER
                 <img src="http://via.placeholder.com/200x200" alt="">
               </div>
               <div class="product-imgx"></div>
-              <div class="product-info">
-                <h2>AKDENİZ SALATASI</h2>
-                <p>ZEYTİN EZMESİ</p>
+              <div class="product-info" data-gnl="1 1p">
+                <div data-gnl="1g">
+                  <h2>AKDENİZ SALATASI</h2>
+                  <p>ZEYTİN EZMESİ</p>
+                </div>
+                <div class="open-it" data-gnl="0 göbekte-ol">
+                  +
+                </div>
               </div>
             </div>
-
           </section>
         </div>
       </div>
