--- a/temalar/sosero/index07.1.html
+++ b/temalar/sosero/index07.1.html
@@ -20,7 +20,11 @@ title: SOSERO ÜRÜN
                 </div>
               </div>
             </article>
-            <div class="kesit" data-kçk="1 23p küçükleri-gizle ortada">a</div>
+            <div data-kçk="1 23p küçükleri-gizle ortada">
+              <div class="kesit">
+                
+              </div>
+            </div>
             <article class="product" data-gnl="1 1p" data-kçk="11 23p" style="height:100%; justify-content:space-between;">
               <div class="product-content" data-gnl="1 1p sığdır kaymadan" style="height:100%;">
                 <div data-gnl="1 1p kaymadan" style="height:65%;">
